--- a/Grocery.App/Views/GroceryListItemsView.xaml
+++ b/Grocery.App/Views/GroceryListItemsView.xaml
@@ -11,7 +11,7 @@
         <ToolbarItem Text="Wijzig kleur" Command="{Binding ChangeColorCommand}" IconImageSource="{FontImage Glyph='&#xf30c;', Color=Black, Size=22}" />
         <ToolbarItem Text="Deel boodschappenlijst" Command="{Binding ShareGroceryListCommand}" IconImageSource="{FontImage Glyph='&#xf30c;', Color=Black, Size=22}" />
     </ContentPage.ToolbarItems>
-    
+
     <Shell.TitleView>
         <Grid>
             <Label Text="{Binding GroceryList.Name}" FontSize="Large" HorizontalOptions="Center" VerticalOptions="Center" />
@@ -24,47 +24,34 @@
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
         <Border Grid.Column="0" Stroke="#C49B33" StrokeThickness="4" Padding="10" Margin="10" HorizontalOptions="Center">
-            <CollectionView ItemsSource="{Binding MyGroceryListItems}" Margin="20" HorizontalOptions="Center" EmptyView="De boodschappenlijst is nog leeg. Voeg eerst boodschappen toe!">
+            <CollectionView ItemsSource="{Binding MyGroceryListItems}" Margin="20" HorizontalOptions="Center" EmptyView="De boodschappenlijst is nog leeg. Voeg eerst boodschappen toe!"
+                            SelectionMode="Single"
+                            SelectionChangedCommand="{Binding RemoveProductCommand}"
+                            SelectionChangedCommandParameter="{Binding Source={RelativeSource Self}, Path=SelectedItem}">
                 <CollectionView.ItemsLayout>
                     <LinearItemsLayout Orientation="Vertical" ItemSpacing="10" />
                 </CollectionView.ItemsLayout>
 
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="m:GroceryListItem">
-                        <Grid>
+                        <Grid BackgroundColor="LightGray" Padding="5">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="4*"/>
                                 <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="30"/>
-                                <ColumnDefinition Width="30"/>
+                                <ColumnDefinition Width="20"/>
+                                <ColumnDefinition Width="20"/>
                             </Grid.ColumnDefinitions>
-
                             <Label Grid.Column="0" Text="{Binding Product.Name}" VerticalOptions="Center"/>
                             <Label Grid.Column="1" Text="{Binding Amount}" VerticalOptions="Center" HorizontalOptions="End" Margin="0,0,10,0"/>
-
-                            <!-- Plus button -->
-                            <Button Grid.Column="2" 
-                                    Text="+" 
-                                    BackgroundColor="LightGreen"
-                                    TextColor="Black"
-                                    FontSize="12"
-                                    WidthRequest="25" 
-                                    HeightRequest="25"
-                                    CornerRadius="12"
-                                    Command="{Binding Source={RelativeSource AncestorType={x:Type vm:GroceryListItemsViewModel}}, Path=IncreaseAmountCommand}"
-                                    CommandParameter="{Binding}" />
-
-                            <!-- Min button -->
-                            <Button Grid.Column="3" 
-                                    Text="−" 
-                                    BackgroundColor="LightCoral"
-                                    TextColor="Black"
-                                    FontSize="12"
-                                    WidthRequest="25" 
-                                    HeightRequest="25"
-                                    CornerRadius="12"
-                                    Command="{Binding Source={RelativeSource AncestorType={x:Type vm:GroceryListItemsViewModel}}, Path=DecreaseAmountCommand}"
-                                    CommandParameter="{Binding}" />
+                            <Grid Grid.Column="2">
+                                <Image Source="plus.png" WidthRequest="15" HeightRequest="15"/>
+                            </Grid>
+                            <Grid Grid.Column="3">
+                                <Image Source="min.png" WidthRequest="15" HeightRequest="15"/>
+                            </Grid>
+                            <!-- Visual indicator dat item klikbaar is -->
+                            <Label Grid.ColumnSpan="4" Text="Klik om te verwijderen" FontSize="10" TextColor="Red" 
+                                   HorizontalOptions="Center" VerticalOptions="End" Margin="0,0,0,2"/>
                         </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
@@ -74,10 +61,10 @@
         <Border Grid.Row="1" Grid.Column="1" Stroke="#C49B33" StrokeThickness="4" Padding="5" Margin="5" HorizontalOptions="Center">
             <StackLayout>
                 <SearchBar Placeholder="Zoek producten..." 
-           SearchCommand="{Binding SearchCommand}"
-           SearchCommandParameter="{Binding Text, Source={x:Reference Name=productSearchBar}}"
-           x:Name="productSearchBar" 
-           Margin="5" /> 
+                           SearchCommand="{Binding SearchCommand}"
+                           SearchCommandParameter="{Binding Text, Source={x:Reference Name=productSearchBar}}"
+                           x:Name="productSearchBar" 
+                           Margin="5" />
                 <CollectionView ItemsSource="{Binding AvailableProducts}" Margin="5" WidthRequest="300" HorizontalOptions="Start"
                     SelectionMode="Single"
                     SelectionChangedCommand="{Binding AddProductCommand}"
